--- a/studentDashboard/templates/studentDashboard/dashboard.html
+++ b/studentDashboard/templates/studentDashboard/dashboard.html
@@ -85,6 +85,8 @@
         <!-- Contents -->
         <div class="contents">
             <div class="row col-12 myRow m-0">
+            {% if tests|length > 0 %}
+            
                 {% for test in tests %}
                 <div class="col-12 col-sm-10 col-md-4 col-xl-3 ml-auto mr-auto">
                     <div class="card myCard">
@@ -168,11 +170,41 @@
                     </div>
                 </div>
                 {% endfor %}
+            {% else %}
+                <!-- Animated Illustration -->
+                    <div class="ml-auto mr-auto" style="width:50%;">
+                        <div id="lottie" class="ml-auto mr-auto" ></div>
+                        <p class="lead text-center" style="transform: translateY(-80px);">
+                            No New Test Posted Yet.
+                        </p>
+                    </div>
+                    
+            {% endif %}
             </div>
         </div>
 
     </div>
 
+  <!-- Lottie Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"
+    integrity="sha512-m0RQU4SBx0p/bLwRiI4fJBGRafVLZ4s86wRe1+OAx5EXbcWiS/X1jvYdJQRD8jOoIVl+WTyVeMawUWVCh1O8+Q=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.4/lottie.min.js"
+    integrity="sha512-m0RQU4SBx0p/bLwRiI4fJBGRafVLZ4s86wRe1+OAx5EXbcWiS/X1jvYdJQRD8jOoIVl+WTyVeMawUWVCh1O8+Q=="
+    crossorigin="anonymous"></script>
+
+
+    <script>
+        var animation = bodymovin.loadAnimation({
+            container: document.getElementById('lottie'), // Required
+            path: "/static/js/nodata.json", // Required
+            renderer: 'svg', // Required
+            loop: true, // Optional
+            autoplay: true, // Optional
+            name: "Hello World", // Name for future reference. Optional.
+        });
+
+    </script>
 
     <!-- Random color script for test card headers -->
     <script>
@@ -183,7 +215,7 @@
             for(let i = 0; i < cardHeaders.length; i++){
                 let randomNumber = Math.floor(Math.random() * 6);
                 cardHeaders[i].style.backgroundColor=listOfColors[randomNumber];
-                cardBtn[i].style.backgroundColor=listOfColors[randomNumber];
+                cardBtns[i].style.backgroundColor=listOfColors[randomNumber];
             }
         };
     </script>
