added files for heroku and postgres setup db

--- a/adminPanel/templates/adminPanel/teacher_dashboard.html
+++ b/adminPanel/templates/adminPanel/teacher_dashboard.html
@@ -306,6 +306,11 @@
                                         <p class="card-title mb-0 grayTitle">Test ends in</p>
                                         <h5 class="mb-0">{{test.test_end_hours}} Hours</h5>
                                     </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-12">
+                                        
+                                    </div>
                                 </div> 
                                 <div class="btn-container d-flex justify-content-center p-2 mt-2">
                                     <input type="text" name="testIdHidden" value={{test.id}} hidden>
