--- a/studentDashboard/templates/studentDashboard/student_test_page.html
+++ b/studentDashboard/templates/studentDashboard/student_test_page.html
@@ -339,6 +339,7 @@
             
             }).then((result) => {
             if (result.isConfirmed) {
+                FullScreenWindow()
                 timerLogic()
             }
             else{
