Teacher Sign Up and ALT+TAB

--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -49,6 +49,9 @@
         <li class="nav-item active ml-2">
           <a class="nav-link" id="hovering" data-toggle="modal" data-target="#elegantModalForm" href="#">Login</a>
         </li>
+        <li class="nav-item active ml-2">
+          <a class="nav-link" id="hovering" data-toggle="modal" data-target="#ModalFormFooter" href="#">Developers</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -106,14 +109,14 @@
         </div>
   
         <div class="modal-body mx-4">
-          <div class="row my-3 d-flex justify-content-center" style="margin:0px !important">
+          {% comment %} <div class="row my-3 d-flex justify-content-center" style="margin:0px !important">
             <a href="{% provider_login_url 'google' %}">
               <button type="button" class="google-btn">
                 <img src="{% static 'images/google_btn.png' %}">
               </button>
             </a>
-          </div>
-          <p class="font-small dark-grey-text text-right d-flex justify-content-center pt-0 mt-3 mb-0 " id="theOrText" style="font-family: 'Roboto', sans-serif;">OR</p>
+          </div> 
+          <p class="font-small dark-grey-text text-right d-flex justify-content-center pt-0 mt-3 mb-0 " id="theOrText" style="font-family: 'Roboto', sans-serif;">OR</p> {% endcomment %}
           {% if errormsg|length > 0 %}
             <p id="loginErrorMsg" class="col-sm-12 col-md-6" style="text-align:center; font-family: 'Roboto', sans-serif; display: block;">{{errormsg}}</p>
           {% endif %}
@@ -181,7 +184,7 @@
         </div>
         <!--Body-->
         <div class="modal-body mx-4 mt-1 pt-0 pr-0 pl-0">
-          <div class="row my-3 d-flex justify-content-center" style="margin:0px !important">
+          {% comment %} <div class="row my-3 d-flex justify-content-center" style="margin:0px !important">
             <a href="{% provider_login_url 'google' %}">
               <button type="button" class="google-btn">
                 <img src="{% static 'images/google_btn.png' %}">
@@ -189,7 +192,7 @@
             </a>
           </div>
 
-          <p class="font-small dark-grey-text text-right d-flex justify-content-center pt-0 mt-3 mb-0 " id="theOrText" style="font-family: 'Roboto', sans-serif;">OR</p>
+          <p class="font-small dark-grey-text text-right d-flex justify-content-center pt-0 mt-3 mb-0 " id="theOrText" style="font-family: 'Roboto', sans-serif;">OR</p> {% endcomment %}
           {% if errormsg|length > 0 %}
             <p id="loginErrorMsg" class="col-sm-12 col-md-6" style="text-align:center; font-family: 'Roboto', sans-serif; display: block;">{{errormsg}}</p>
           {% endif %}
@@ -342,6 +345,55 @@
     </div>
   </div>
   
+
+  <div class="modal fade" id="ModalFormFooter" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content form-elegant">
+        <div class="modal-header text-center pb-0">
+          <h5 class="modal-title" id="exampleModalLabel">Developers</h5>
+          <button type="button" class="close position-absolute mr-2 mt-1" data-dismiss="modal" aria-label="Close" style="outline: none; margin-left: auto; top: 0px; right: 0px;">
+            <span aria-hidden="true" style="font-size: 35px;">&times;</span>
+          </button>
+        </div>
+        <hr>
+        <div class="dev">
+          <div class="devDescription ml-4">
+            <p id="devName" style="font-weight: bold;">Prof.Dr. Deepak C Mehetre</p>
+            <p id="devWork">HOD Computer Department, KJCOEMR</p>
+          </div>
+        </div>
+        <div class="modal-body mx-4">
+          <div class="dev mt-3">
+            <div class="devDescription ml-4">
+              <p id="devName" style="font-weight: bold;">Quresh Lakdawala</p>
+              
+            </div>
+          </div>
+          <div class="dev mt-3">
+            <div class="devDescription ml-4">
+              <p id="devName" style="font-weight: bold;">Bharat Choudhary</p>
+            </div>
+          </div>
+          <div class="dev mt-3">
+            <div class="devDescription ml-4">
+              <p id="devName" style="font-weight: bold;">Bhavik Khatri</p>
+            </div>
+          </div>
+          <div class="dev mt-3">
+            <div class="devDescription ml-4">
+              <p id="devName" style="font-weight: bold;">Saif Mulla</p>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <!-- <button type="button" class="btn btn-primary">Login</button> -->
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <!-- Lottie Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"
